tests/baselines/reference/importDeclRefereingExternalModuleWithNoResolve.errors.txt
tests/cases/compiler/importDeclRefereingExternalModuleWithNoResolve.ts(1,20): error TS2307: Cannot find module 'externalModule'.
tests/cases/compiler/importDeclRefereingExternalModuleWithNoResolve.ts(2,16): error TS2664: Invalid module name in augmentation, module 'm1' cannot be found.
tests/cases/compiler/importDeclRefereingExternalModuleWithNoResolve.ts(3,26): error TS2307: Cannot find module 'externalModule'.


==== tests/cases/compiler/importDeclRefereingExternalModuleWithNoResolve.ts (3 errors) ====
    import b = require("externalModule");
                       ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'externalModule'.
    declare module "m1" {
                   ~~~~
!!! error TS2664: Invalid module name in augmentation, module 'm1' cannot be found.
        import im2 = require("externalModule");
                             ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'externalModule'.
    }
    